--- a/index.css
+++ b/index.css
@@ -97,6 +97,7 @@
     background-color: #ef5e5e;
     box-shadow:0px 0px 1px 5px rgba(128,128,128,0.25);
 }
+/*box shadow */
 .c2{
     width: 12.5%;
     height: 20px;
